infra/kubernetes/components/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
